fix 1px shift in normal and active state by reworking some styles

--- a/themes/atom-dark-ui/tabs.css
+++ b/themes/atom-dark-ui/tabs.css
@@ -13,7 +13,8 @@
   background-image: -webkit-linear-gradient(#292c2f, #1d1f21);
   margin-left: 1px;
   box-shadow:
-    inset 0 1px 0 rgba(255, 255, 255, 0.1),
+    inset 0 2px 0 rgba(255, 255, 255, 0.1),
+    inset 0 1px 0 rgba(0, 0, 0, 1),
     inset 1px 0 0 rgba(255, 255, 255, 0.05),
     inset -1px 0 0 rgba(255, 255, 255, 0.05);
   color: #b9bdc1;
@@ -23,7 +24,6 @@
 .tab.active {
   background-image: -webkit-linear-gradient(#43484d, #303337);
   color: #fff;
-  padding-top: 6px;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
   box-shadow:
     inset 0 1px 0 rgba(0, 0, 0, 0.5),
